fix(styles): make headings, paragraphs readable. remove auto backticks from code, reduce list item vertical margins

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,7 +74,7 @@
 	}
 
 	html body {
-		@apply mx-auto flex min-h-screen max-w-4xl xl:max-w-6xl flex-col bg-bgColor px-8 pt-16 font-sans text-lg font-normal text-textColor antialiased;
+		@apply mx-auto flex min-h-screen max-w-5xl xl:max-w-6xl flex-col bg-bgColor px-8 pt-8 font-sans text-lg font-normal text-textColor antialiased;
 	}
 
 	.prose {
@@ -88,6 +88,11 @@
 
 .prose :where(img):not(:where([class~="not-prose"] *)) {
 	border-radius: 6px;
+}
+
+.prose-lg :where(li):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+	margin-top: 0.2rem;
+	margin-bottom: 0.2rem;
 }
 
 .prose :where(a):not(:where([class~="not-prose"] *)) {
@@ -109,16 +114,6 @@
 }
 
 
-.dark img:not([src*=".svg"]) {
-	@apply brightness-50 contrast-50;
-	filter: var(--image-filter);
-}
-
-.dark .prose :where(img):not(:where([class~="not-prose"] *)) {
-	@apply brightness-50 contrast-50;
-	filter: var(--image-filter);
-}
-
 .shiki,
 .shiki span {
 	@apply text-base leading-7;
@@ -137,8 +132,8 @@
 		--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
 		--tweet-font-color: rgb(247, 249, 249);
 		--tweet-font-color-secondary: rgb(139, 152, 165);
-		--tweet-bg-color: hsl(240, 20%, 12%) !important;
-		--tweet-bg-color-hover: hsl(240 15% 10%) !important;
+		--tweet-bg-color: hsl(240, 20%, 8%) !important;
+		--tweet-bg-color-hover: hsl(240 15% 9%) !important;
 		--tweet-color-blue-secondary:hsl(234, 94%, 80%) !important;
 		--tweet-color-blue-secondary-hover: hsla(234, 94%, 80%, 0.147) !important;
 	}
@@ -146,23 +141,23 @@
 
 /* astro-tweet light theme */
 html:not(.dark) :where(.astro-tweet-theme) {
-	--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
-	--tweet-font-color: rgb(6, 6, 6);
-	--tweet-font-color-secondary: rgb(139, 152, 165);
+	--tweet-border: 2px solid hsl(234deg 85.16% 59.38% / 23.3%) !important;
+	--tweet-font-color: rgb(6, 6, 6) !important;
+	--tweet-font-color-secondary: rgb(139, 152, 165) !important;
 	--tweet-bg-color: hsl(240, 100%, 100%) !important;
-	--tweet-bg-color-hover: hsl(240, 41%, 97%) !important;
-	--tweet-color-blue-secondary: hsl(234, 100%, 75%) !important;
+	--tweet-bg-color-hover: hsl(240, 41%, 99%) !important;
+	--tweet-color-blue-secondary: hsl(234, 95%, 71%) !important;
 	--tweet-verified-blue-color: hsl(234, 100%, 75%) !important;
 }
 
 @media (prefers-color-scheme: light) {
 	:where(.astro-tweet-theme) {
-		--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
-		--tweet-font-color: rgb(6, 6, 6);
-		--tweet-font-color-secondary: rgb(139, 152, 165);
+		--tweet-border: 2px solid hsl(234deg 85.16% 59.38% / 23.3%) !important;
+		--tweet-font-color: rgb(6, 6, 6) !important;
+		--tweet-font-color-secondary: rgb(139, 152, 165) !important;
 		--tweet-bg-color: hsl(240, 100%, 100%) !important;
-		--tweet-bg-color-hover: hsl(240, 41%, 97%) !important;
-		--tweet-color-blue-secondary: hsl(234, 100%, 75%) !important;
+		--tweet-bg-color-hover: hsl(240, 41%, 99%) !important;
+		--tweet-color-blue-secondary: hsl(234, 95%, 71%) !important;
 		--tweet-verified-blue-color: hsl(234, 100%, 75%) !important;
 	}
 }
@@ -180,7 +175,20 @@ html:not(.dark) :where(.astro-tweet-theme) {
 	font-size: 1em;
 }
 
+h2, p, a {
+	letter-spacing: -0.05px;
+		word-spacing: -0.05px;
+}
+
 .prose-lg h2 {
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before {
+	content: "";
+}
+
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
+	content: "";
 }
